# django-starter-template

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  context.md  docker-compose.yml  env.example  index.html  manage.py  mkdocs.yml  notebook.ipynb  pyproject.toml  pytest.ini  research.md  skills-lock.json
.agents/skills/django-celery-expert/: SKILL.md
.agents/skills/django-celery-expert/references/: configuration-guide.md  django-integration.md  error-handling.md  monitoring-observability.md  periodic-tasks.md  production-deployment.md  task-design-patterns.md
.agents/skills/django-expert/: SKILL.md
.agents/skills/django-expert/references/: README.md  drf-guidelines.md  examples.md  models-and-orm.md  performance-optimization.md  production-deployment.md  security-checklist.md  testing-strategies.md  views-and-urls.md
.clinerules/: django-backend-rules.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.docker/: canary.json
.github/: copilot-instructions.md
.github/prompts/: feature.prompt.md  refactor.prompt.md  security-api.prompt.md  security.prompt.md  test-model.prompt.md  test-view.prompt.md
.github/workflows/: test.yml
.pi/extensions/plan-mode/: index.ts  plan-files.ts  prompts.ts
.pi/plans/: 2026-05-28-knox-to-jwt-migration.md
ai/: index.html
ai_tools/: index.html
ai_tools/cline_roocode/: index.html
ai_tools/copilot/: index.html
ai_tools/gemini/: index.html
apps/core/: managers.py  middleware.py  models.py  schema.py  tasks.py  urls.py  views.py
apps/core/management/: __init__.py
apps/core/management/commands/: __init__.py  seed.py
apps/core/tests/: test_base_model.py  test_basesoftdelete_model.py  test_core_views.py  test_views.py
apps/users/: admin.py  auth_backend.py  forms.py  managers.py  models.py  schema.py  serializers.py  throttles.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_create_user_view.py  test_jwt_endpoints.py  test_login_view.py  test_models.py  test_profile_view.py  test_user_model.py
authentication/: index.html
auto_documentation/: index.html
conf/: asgi.py  celery.py  middleware.py  settings.py  test_settings.py  test_utils.py  urls.py  wsgi.py
copilot_prompts/: index.html
core_endpoints/: index.html
database_seeding/: index.html
dependencies/: index.html
development/: index.html
django_starter_template/: settings.py  urls.py  wsgi.py
docs/: ai.md  authentication.md  auto_documentation.md  copilot_prompts.md  core_endpoints.md  database_seeding.md  dependencies.md  development.md  environment_setup.md  index.md  logging.md  project_structure.md  rate_limiting.md  settings.md  tasks.md  testing.md  useful_commands.md
docs/ai_tools/: cline_roocode.md  copilot.md  gemini.md  index.md
docs/assets/: custom.css
environment_setup/: index.html
logging/: index.html
project_structure/: index.html
rate_limiting/: index.html
scripts/: bump.py  celery.py  django.py  wait-for-migrations.sh
search/: search_index.json
settings/: index.html
tasks/: index.html
templates/: 404.html  500.html  index.html
testing/: index.html
