[tool.poetry]
# TODO ⚡ Change the name, version, description, authors, and license of the project
name = "django-starter-template"
version = "0.2.8"
description = "A comprehensive starting point for your new API with Django and DRF"
authors = ["Carlos <carlos@pythoncheatsheet.org>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
django-environ = "^0.12.0"
django-cors-headers = "^4.5.0"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
django-rest-knox = "^5.0.2"
redis = "^5.1.1"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
sentry-sdk = {extras = ["django"], version = "^2.17.0"}
django-redis = "^5.4.0"
drf-spectacular = "^0.28.0"
faker = "^37.1.0"
django-seed = "^0.3.1"
django-extensions = "^4.1"
django-filter = "^25.1"
python-json-logger = "^3.3.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
ipykernel = "^6.29.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
server = "scripts.django:runserver"
makemigrations = "scripts.django:makemigrations"
migrate = "scripts.django:migrate"
worker = "scripts.celery:run_worker"
beat = "scripts.celery:run_beat"
bump = "scripts.bump:bum_version"
create_dev_env = "scripts.django:create_dev_env"
seed = "scripts.django:seed"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
